Implement flickr-feed-detail component, style the app.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,1 +1,3 @@
+@import "../node_modules/bootswatch/flatly/variables";
+
 $icon-font-path: '../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
