--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+
+<header class="page--header"><h1 class="container">Flickr Public Feed</h1></header>
+<main>
+    <div class="container">
+        <router-outlet ></router-outlet>
+    </div>
+</main>
