--- a/src/app/components/flickr-feed-list/flickr-feed-list.component.scss
+++ b/src/app/components/flickr-feed-list/flickr-feed-list.component.scss
@@ -1,60 +1,26 @@
-.app-container {
-    width: 1000px;
+img {
     margin: auto;
-
-    h1 {
-        margin-bottom: 1em;
-    }
 }
 
-.feed-container {
-    border: 1px solid #000000;
-    height: 80vh;
-    overflow-y: scroll;
-}
+.item-info {
 
-.flickr-item {
-    border: 1px solid #000000;
-}
-
-.flickr-item-img {
-    vertical-align: top;
-    display:inline-block;
-    margin: auto;
-    width: 200px;
-    height: 120px;
-    background-color: #494949;
-    border: 2px solid darken(#494949, 15%);
-    img {
-        display: block;
-        margin: auto;
-        max-width: 100%;
-        max-height: 100%;
-    }
-}
-
-.flickr-item-info {
-
-    width: 750px;
-    h2 {
+    h2, h2 a {
         margin-top: 0;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
+        width:100%;
     }
-    display: inline-block;
 
     a, p {
         margin-right: 1em;
     }
 
-    a {
-        text-decoration: underline;
-    }
+
 }
 
 @media (min-width: 800px){
-    .flickr-item-info {
+    .item-info {
         a, p {
             display: inline-block;
         }
